--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "react-app-polyfill": "^1.0.5",
     "react-dev-utils": "^10.0.0",
     "react-dom": "^16.12.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "resolve": "1.12.2",
     "resolve-url-loader": "3.1.1",
     "sass-loader": "^8.0.0",
@@ -140,7 +142,15 @@
   },
   "babel": {
     "presets": [
-      "react-app"
+      "@babel/preset-react",
+      "@babel/preset-env"
+    ],
+    "plugins": [
+      "@babel/plugin-proposal-class-properties"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/preset-react": "^7.8.3"
   }
 }
