--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "homepage": "http://S11as.github.io/blind-typer",
   "dependencies": {
     "@babel/core": "7.7.4",
+    "@babel/polyfill": "^7.8.3",
+    "@babel/runtime": "^7.8.3",
     "@svgr/webpack": "4.3.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
@@ -150,7 +152,8 @@
       "@babel/preset-env"
     ],
     "plugins": [
-      "@babel/plugin-proposal-class-properties"
+      "@babel/plugin-proposal-class-properties",
+      "@babel/plugin-transform-runtime"
     ]
   },
   "devDependencies": {
